moved the shuffle container inside the music-container to make sure it's aligned perfectly

--- a/styles.css
+++ b/styles.css
@@ -115,9 +115,7 @@ body{
 }
 .shuffle-cont{
     position: fixed;
-    width: 100%;
-    height: auto;
-    z-index: 97;
+    z-index: 100;
     display: flex;
     justify-content: flex-end;
     align-items: center;
